--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           # python3 -m venv /venv
           # . /venv/bin/activate
           # pip install pyyaml
+          tlmgr update --self
           tlmgr install libertine \
                   sourcecodepro \
                   ly1 \
