--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Install Python and Dependencies
         run: |
           apk add --no-cache python3 py3-pip py3-yaml make 
-          apk add icu-libs dart-sass --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
+          apk add icu-libs --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
+          apk add dart-sass --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
           # apk add --no-cache dart-sass
           # python3 -m venv /venv
           # . /venv/bin/activate
