--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,6 @@ jobs:
       - name: Install Python and Dependencies
         run: |
           apk add --no-cache python3 py3-pip py3-yaml make 
-          apk add --no-cache icu-libs=~76.1-r0 dart-sass --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
-          # python3 -m venv /venv
-          # . /venv/bin/activate
-          # pip install pyyaml
           tlmgr update --self
           tlmgr install libertine \
                   sourcecodepro \
@@ -46,6 +42,10 @@ jobs:
                   beamertheme-metropolis \
                   pgfopts \
                   beamercolorthemeowl
+
+      - name: Install dart-sass
+        run: |
+          apk add --no-cache icu-libs=~76.1-r0 dart-sass --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
 
       - name: Build Lectures
         run: |
