--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,13 @@ jobs:
                   pgfopts \
                   beamercolorthemeowl
 
-      - name: Install dart-sass
+      - name: Install Dart Sass
         run: |
-          apk add --no-cache icu-libs=~76.1-r0 dart-sass --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/
+          wget -O dart-sass.tar.gz https://github.com/sass/dart-sass/releases/download/1.89.2/dart-sass-1.89.2-linux-arm64-musl.tar.gz
+          tar -xzf dart-sass.tar.gz -C /usr/local/
+          echo "/usr/local/dart-sass" >> $GITHUB_PATH
+          rm dart-sass.tar.gz
+          /usr/local/dart-sass/sass --version
 
       - name: Build Lectures
         run: |
