--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "emeraldwalk.runonsave": {
+
     "commands": [
       {
         // Run whenever a markdown file is saved
         "match": ".md",
-        "cmd": "make html"
+        "cmd": "make all"
       }
     ]
   },
