--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
       }
     ]
   },
-  "liveServer.settings.root": "/build"
+  "liveServer.settings.root": "/build",
+  "python-envs.defaultEnvManager": "ms-python.python:pyenv",
+  "python-envs.pythonProjects": []
 }
