--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,10 @@
   },
   "liveServer.settings.root": "/build",
   "python-envs.defaultEnvManager": "ms-python.python:pyenv",
-  "python-envs.pythonProjects": []
+  "python-envs.pythonProjects": [],
+  "cSpell.words": [
+    "AEST",
+    "behaviours",
+    "nonstandardinteraction"
+  ]
 }
