updating the tutorial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,21 @@
   "python-envs.defaultEnvManager": "ms-python.python:pyenv",
   "python-envs.pythonProjects": [],
   "cSpell.words": [
+    "Adiwangsa",
     "AEST",
+    "analysed",
     "behaviours",
-    "nonstandardinteraction"
+    "Bennetts",
+    "Bidwell",
+    "Choi",
+    "internalise",
+    "Karim",
+    "Marsden",
+    "nonstandardinteraction",
+    "Reitmaier",
+    "SIGCHI",
+    "summarising",
+    "visualise",
+    "Zabin"
   ]
 }
