--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "pandas (>=2.3.1,<3.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "scipy (>=1.16.1,<2.0.0)",
-    "ipykernel (>=6.30.1,<7.0.0)"
+    "ipykernel (>=6.30.1,<7.0.0)",
+    "statsmodels (>=0.14.5,<0.15.0)"
 ]
 
 [build-system]
